# lksh-p-2025-match

./: .gitignore  CODEOWNERS  CONTRIBUTORS.md  LICENSE  Makefile  README.md  dishka.nix  shell.nix
API/: OpenAPI.yaml
api/: openapi.yaml
bff/: .env.example  Dockerfile  Makefile  README.md  config.toml  dev.dockerfile  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  prod.dockerfile  pyproject.toml  requirements.txt  start_webapp.sh  telegrambot.dev.dockerfile  test.dockerfile  webapp.dev.dockerfile  website.dev.dockerfile
bff/app/: bot.py  config.py  database.py  main.py  models.py
bff/app/adapters/: core.py  rest.py  stub.py
bff/app/handlers/: __init__.py
bff/app/tg_bot/: bot.py
bff/app/webapp/: auth.py  main.py  vars.py
bff/app/webapp/templates/: bad_user_id.html  basic_interface.html  login_form.html  login_form_username.html
bff/core_client/: __init__.py
bff/core_client/api/activities/: get_core_activities_by_sport_section_id.py  get_core_teams_by_activity_id.py  post_core_activity_id_enroll.py
bff/core_client/api/players/: register_player.py
bff/core_client/api/sport_sections/: get_core_sport_list.py
bff/core_client/models/: __init__.py  activity.py  activity_enroll_player_request.py  get_core_activities_by_sport_section_id_response_200.py  get_core_activities_by_sport_section_id_response_400.py  get_core_sport_list_response_200.py  get_core_teams_by_activity_id_response_200.py  get_core_teams_by_activity_id_response_400.py  player.py  post_core_activity_id_enroll_response_200.py  post_core_activity_id_enroll_response_400.py  post_core_activity_id_enroll_response_409.py  register_player_request.py  register_player_response_200.py  register_player_response_201.py  register_player_response_500.py  sport_section.py  team.py
bff/lkshmatch/: .env.example  Dockerfile  bot.py  config.py  config.toml  di.py  main.py  mainWebapp.py  pyproject.toml  requirements.txt  startbot.sh
bff/lkshmatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bff/lkshmatch/adapters/: base.py  core.py  players.py  rest.py  sport_sections.py  team.py  tournaments.py
bff/lkshmatch/adapters/core/: activity.py  helpers.py  players.py  sport_sections.py  team.py  tournaments.py
bff/lkshmatch/adapters/core/admin/: admin_privilege.py
bff/lkshmatch/adapters/core/mappers/: activity.py  player.py  sport_section.py
bff/lkshmatch/adapters/gheets/: gsheets.py
bff/lkshmatch/adapters/rest/: players.py
bff/lkshmatch/adapters/stub_core/: activity.py  players.py  sport_sections.py  team.py  tournaments.py
bff/lkshmatch/adapters_tests/: activity_test.py  register_test.py  sport_section_test.py
bff/lkshmatch/admin/: admin_privilege.py
bff/lkshmatch/auth/: admin_privilege.py
bff/lkshmatch/domain/repositories/: admin_repository.py  player_repository.py  student_repository.py
bff/lkshmatch/repositories/: admins.py  mongodb.py  player.py
bff/lkshmatch/repositories/mongo/: admins.py  players.py  stub_students.py  students.py
bff/lkshmatch/test_to_adapters/: activity_test.py  register_test.py  sport_section_test.py  test_to_register.py
bff/lkshmatch/tg_bot/: bot.py  main.py
bff/lkshmatch/webapp/: Dockerfile  auth.py  login_wall.py  main.py  mainWebapp.py  roadmap.md  root.py  table_adapter.py  vars.py
bff/lkshmatch/webapp/templates/: basic_interface.html  index.html  login.html  login_form_code.html  login_forms.html  one_section.html  sections.html
bff/lkshmatch/webapp/templates/auth/table/: register_in_section.html
bff/lkshmatch/webapp/templates/table/: register_in_section.html
bff/lkshmatch/website/: activities.py  activities_gsheets.py  api_requests.py  main.py  mainWebapp.py  root.py  table_adapter.py  templating.py  vars.py
bff/lkshmatch/website/auth/: auth.py  login_middleware.py
bff/lkshmatch/website/templates/: admin_activity_panel.html  admin_panel.html  basic_interface.html  index.html  list_of_activities.html  list_of_sections.html  list_of_teams.html  some_error.html
bff/lkshmatch/website/templates/editor/: ru.js
bff/lkshmatch/website/templates/table/: admin_panel.html  register_in_section.html
bff/lkshmatch/website/templates/table/admin_panel/: blocks.html  home.html
bff/mongodb/mongo-init-scripts/: 000-init-contestr-db.js
bff/tests/unit/adapters/core/: test_players.py
core/: .env.example  Makefile  dev.dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  go.mod  go.sum  prod.dockerfile  tools.go  (+1 more)
(+235 files in other folders)
