[project]
name = "lkshmatch"
version = "0.1.0"
description = "Backend-for-frontend of MATCH"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13.5"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "dynaconf",
    "python-jose",
    "pytelegrambotapi",
    "dishka",
    "pymongo",
    "httpx",
    "aiohttp",
    "python-multipart>=0.0.20",
    "httplib2>=0.22.0",
    "google-api-python-client>=2.179.0",
    "oauth2client>=4.1.3",
]

[tool.uv]
dev-dependencies = [
    "httpx >= 0.27.0",
    "iniconfig >= 2.0.0",
    "mypy >= 1.11.1",
    "openapi-python-client",
    "pytest >= 8.3.2",
    "pytest-asyncio >= 0.23.8",
    "pytest-dependency >= 0.6.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14.0",
    "ruff >= 0.11.4",
]

[tool.ruff.lint]
ignore = []

[tool.mypy]
python_version = 3.12
disable_error_code = [
    "no-any-return",
]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = false

[tool.pytest.ini_options]
pythonpath = [ ".", "src",]
asyncio_mode="auto"

[pytest]
markers = []
