[project]
name = "lkshmatch"
version = "0.1.0"
description = "Backend-for-frontend service for Match"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13.5"
dependencies = [
    "aiohttp >= 3.12.15",
    "dishka >= 1.6.0",
    "dynaconf >= 3.2.11",
    "fastapi >= 0.116.1",
    "pydantic >= 2.11.7",
    "pymongo >= 4.14.0",
    "pytelegrambotapi >= 4.28.0",
    "python-jose >= 3.5.0",
    "uvicorn >= 0.35.0",
    "uvloop>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "httpx >= 0.27.0",
    "iniconfig >= 2.0.0",
    "mypy >= 1.11.1",
    "openapi-python-client",
    "pytest >= 8.3.2",
    "pytest-asyncio >= 0.23.8",
    "pytest-dependency >= 0.6.0",
    "pytest-dotenv >= 0.5.2",
    "pytest-mock >= 3.14.0",
    "ruff >= 0.11.4",
]

[tool.ruff.lint]
ignore = []

[tool.mypy]
python_version = 3.12
disable_error_code = [
    "no-any-return",
]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_subclassing_any = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = false

[tool.pytest.ini_options]
pythonpath = [ ".", "src",]
asyncio_mode="auto"

[pytest]
markers = []
